# rust-bomberman

./: Cargo.toml  README.md
examples/pixel/: main.rs
resources/: display_config.ron
resources/ui/: fps.ron  loading.ron
src/: bundle.rs  main.rs
src/entities/: camera.rs
src/states/: game_play.rs  loading.rs  main_menu.rs  mod.rs
src/systems/: debug.rs  mod.rs
