[package]
name = "rust-bomberman"
version = "0.1.0"
authors = ["Michal Nicpon <nicpon.michal@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "master" }
log = "0.4.0"
env_logger = "0.5.13"

[features]
nightly = ["amethyst/nightly"]
